Second version: 1. Spinner->button (language change). 2. Corrected hints. 3. Code refactoring.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,6 +7,6 @@
     <string name="napisWynik">Chain Link Number:</string>
     <string name="napisWynikRownania">Result</string>
     <string name="przyciskOblicz">Calculate</string>
-    <string name="napisTlumacz">Language:</string>
+    <string name="napisTlumacz">English / Polski</string>
     <string name="napisDane">Please enter integer values higher than 0.</string>
 </resources>
