--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,34 @@
         <item>English</item>
         <item>Polski</item>
     </string-array>
-    <string name="napisSuportPiasta">Bottom Bracket To Rear Hub Length [cm]</string>
-    <string name="napisWynik">Chain Link Number:</string>
-    <string name="napisWynikRownania">0</string>
-    <string name="przyciskOblicz">Calculate</string>
-    <string name="napisTlumacz">English / Polski</string>
-    <string name="napisKaseta">"Largest Cassette Disc Chainrings Number"</string>
-    <string name="napisKorba">Largest Chainset Disc Chainrings Number</string>
-    <string name="napisDane">Please enter values higher than 0.</string>
+    <string name="txtResult">Chain Link Number:</string>
+    <string name="resultChainLinkNumber">0</string>
+    <string name="btnCalculate">Calculate</string>
+    <string name="txtTranslate">English / Polski</string>
+    <string name="txtNumberChainringsLargestDiscCassette">Largest Cassette Disc Chainrings Number</string>
+    <string name="txtNumberChainringsLargestDiscChainset">Largest Chainset Disc Chainrings Number</string>
+    <string name="txtLengthBottomBracketRearHub">Bottom Bracket To Rear Hub Length [cm]</string>
+    <string name="txtData">Please enter values higher than 0.</string>
+    <string name="txtPDF">Create PDF</string>
+//pdf
+    <string name="pdfBikeName">Bike</string>
+    <string name="pdfBikeType">Type</string>
+    <string name="pdfCreated">PDF created!</string>
+    <string name="pdfError">"Error: "</string>
+    <string name="pdfNoApp">No PDF viewer application available.</string>
+//sql
+    <string name="txtBikeName">Bike Name</string>
+    <string name="btnSqlUpdate">Update</string>
+    <string name="btnSqlDelete">Delete</string>
+    <string name="txtSqlNoRecordsList">No records found. Create new calculation.</string>
+    <string name="txtSqlBikeType">Bike Type</string>
+    <string name="txtSqlBikeName">Bike Name</string>
+    <string name="btnSqlChooseImage">Choose Image</string>
+    <string name="btnAddSqlCalculate">Add Calculation</string>
+    <string name="btnModifySqlCalculate">Modify Calculation</string>
+//bike items
+    <string name="txtSqlChainset">Largest Cassette Disc Chainrings Number:</string>
+    <string name="txtSqlCassette">Largest Chainset Disc Chainrings Number:</string>
+    <string name="txtSqlBracket">Bottom Bracket To Rear Hub Length [cm]:</string>
+
 </resources>
